--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,8 +19,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint
+      # C0301: ignore long lines
       run: |
-        pylint $(git ls-files '*.py') --ignore-long-lines --output=pylint_result.txt || true
+        pylint $(git ls-files '*.py') --disable=C0301 --output=pylint_result.txt || true
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
