--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,9 +19,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint
-      # C0301: ignore long lines
+      # C0301: long lines
+      # C0103: naming errors
+      # C0410: mutiple imports on 1 line
       run: |
-        pylint $(git ls-files '*.py') --disable=C0301 --output=pylint_result.txt || true
+        pylint $(git ls-files '*.py') --disable=C0301,C0103,C0410 --output=pylint_result.txt || true
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
