Update for spotify connect

--- a/install_modules/audio/asound.conf
+++ b/install_modules/audio/asound.conf
@@ -4,9 +4,19 @@ pcm.MPD_in {
     slave.pcm "dmixer"
 }
 
-pcm.SpotCon_in {
-    type plug
+#pcm.SpotCon_in {
+#    type plug
+#    slave.pcm "SpotCon_VolControl"
+#}
+
+
+pcm.SpotCon_VolControl {
+    type softvol
     slave.pcm "dmixer"
+    control {
+        name "SpotCon_Volume"
+        card 0
+    }
 }
 
 pcm.SysSound_in {
@@ -34,14 +44,20 @@ pcm.dmixer {
     }
 }
 
-# Define the default PCM device to use the dmix setup
+# Define the default PCM device to use the dmix via SpotCon_VolControl
 pcm.!default {
     type plug
-    slave.pcm "dmixer"
+    slave.pcm "SpotCon_VolControl"
 }
 
 # Define a default control interface for ALSA
 ctl.!default {
+    type hw
+    card 0
+}
+
+# Define a control interface for SpotCon_Volume
+ctl.SpotCon_Volume {
     type hw
     card 0
 }
