Comment capitalization fix

--- a/install_modules/backlighting/backlighting.service.template
+++ b/install_modules/backlighting/backlighting.service.template
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 # Using specifiers: https://www.freedesktop.org/software/systemd/man/latest/systemd.unit.html#Specifiers
-# script path will be replaced by install script ../backlighting.sh
+# Script path will be replaced by install script ../backlighting.sh
 ExecStart=/usr/bin/python3 SCRIPT_PATH/backlighting.py
 WorkingDirectory=SCRIPT_PATH
 User=%u
