--- a/install_modules/audio/asound.conf
+++ b/install_modules/audio/asound.conf
@@ -1,63 +1,65 @@
-# Define the three input signals as separate PCM devices
+# Define MPD input to mix with dmixer
 pcm.MPD_in {
     type plug
     slave.pcm "dmixer"
 }
 
-#pcm.SpotCon_in {
-#    type plug
-#    slave.pcm "SpotCon_VolControl"
-#}
-
-
-pcm.SpotCon_VolControl {
-    type softvol
-    slave.pcm "dmixer"
-    control {
-        name "SpotCon_Volume"
-        card 0
-    }
-}
-
+# System Sounds input
 pcm.SysSound_in {
     type plug
     slave.pcm "dmixer"
 }
 
-# Define the dmix plugin to mix the inputs
+# Spotify Connect input
+pcm.SpotCon_in {
+    type plug
+    slave.pcm "dmixer"
+}
+
+
+# Softvol volume control for dmixer
+#pcm.volume_control {
+#    type softvol
+#    slave.pcm "dmixer"
+#    control {
+#        name "SoftVolume"  # Use a unique name
+#        card "DigiAMP"
+#    }
+#    min_dB -51.0
+#    max_dB 0.0
+#}
+
+
+
+# Mixer definition
 pcm.dmixer {
     type dmix
-    ipc_key 1234            # Unique key for shared memory
-    ipc_perm 0666           # Permissions for access
+    ipc_key 1234
+    ipc_perm 0666
     slave {
-        pcm "hw:0,0"        # Physical output device
-        rate 44100          # Output sample rate
-        format S16_LE       # Output format (16-bit, little-endian)
-        channels 2          # Stereo output
-        period_time 0       # Auto-calculate period time
-        period_size 1024    # Size of each period (in frames)
-        buffer_size 4096    # Total buffer size (in frames)
+        pcm "hw:0,0"        # Use the physical output (DigiAMP+)
+     #   rate 44100          # Ensure compatibility
+        rate 96000
+        format S16_LE       # 16-bit, little-endian
+        channels 2
+        period_time 0
+        period_size 1024
+        buffer_size 4096
     }
     bindings {
-        0 0                 # Map left channel
-        1 1                 # Map right channel
+        0 0
+        1 1
     }
 }
 
-# Define the default PCM device to use the dmix via SpotCon_VolControl
+# Default PCM uses volume_control
 pcm.!default {
     type plug
-    slave.pcm "SpotCon_VolControl"
+    slave.pcm "dmixer"
 }
 
-# Define a default control interface for ALSA
+# Define a standard control interface
 ctl.!default {
     type hw
-    card 0
-}
-
-# Define a control interface for SpotCon_Volume
-ctl.SpotCon_Volume {
-    type hw
-    card 0
+    card "DigiAMP"
 }
