--- a/install_modules/audio/mpd.conf.template
+++ b/install_modules/audio/mpd.conf.template
@@ -11,7 +11,7 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"USB_MUSIC"
+music_directory		"PLACEHOLDER_USB_MUSIC"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use
