--- a/install_modules/audio/mpd.conf.template
+++ b/install_modules/audio/mpd.conf.template
@@ -18,7 +18,7 @@ music_directory		"PLACEHOLDER_USB_MUSIC"
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-playlist_directory		"/var/lib/mpd/playlists"
+playlist_directory		"PLACEHOLDER_USB_PLAYLISTS"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -419,3 +419,11 @@ decoder {
 filesystem_charset		"UTF-8"
 #
 ###############################################################################
+
+# Oradio audio output
+audio_output {
+    type            "alsa"
+    name            "MPD Output"
+    device          "MPD_in"      # The ALSA PCM device
+    mixer_type      "none"        # Disable software volume control
+}
