--- a/install_modules/audio/mpd.conf.template
+++ b/install_modules/audio/mpd.conf.template
@@ -102,7 +102,7 @@ bind_to_address			"localhost"
 # Setting "restore_paused" to "yes" puts MPD into pause mode instead
 # of starting playback after startup.
 #
-#restore_paused "no"
+restore_paused "yes"
 #
 # This setting enables MPD to create playlists in a format usable by other
 # music players.
