--- a/install_modules/autostart/autostart.service.template
+++ b/install_modules/autostart/autostart.service.template
@@ -1,14 +1,19 @@
 [Unit]
 Description=Autostart Oradio
 After=multi-user.target
+StartLimitInterval=55		# must be greater than RestartSec * StartLimitBurst otherwise the service will be restarted indefinitely
+StartLimitBurst=5			# Try max 5 times
 
 [Service]
+Type=simple
 # Placeholders will be modified by ../autostart.sh script
 User=PLACEHOLDER_USER
 Group=PLACEHOLDER_GROUP
 WorkingDirectory=PLACEHOLDER_PATH
-ExecStart=/home/PLACEHOLDER_USER/.venv/bin/python3 PLACEHOLDER_PATH/oradio_control.py &
+ExecStart=/home/PLACEHOLDER_USER/.venv/bin/python3 PLACEHOLDER_PATH/oradio_control.py
 RemainAfterExit=true
+Restart=always
+RestartSec=10				# Restart after 10 seconds
 
 [Install]
 WantedBy=multi-user.target
