--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,14 +16,29 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip 
         pip install pylint
+        # backlighting
+        pip install smbus2 rpi-lgpio
+        # logging
+        pip install concurrent_log_handler requests
+        # network - wifi
+        pip install nmcli
+        # utils
+        pip install vcgencmd
+        # usb_service
+        pip install watchdog
+        # volume
+        pip install pyalsaaudio --use-pep517
+        # web_service
+        pip install pydantic fastapi JinJa2 uvicorn python-multipart
+        pip install
     - name: Analysing the code with pylint
       # C0301: long lines
       # C0103: naming errors
       # C0410: mutiple imports on 1 line
       run: |
-        pylint $(git ls-files '*.py') --disable=C0301,C0103,C0410 --output=pylint_result.txt || true
+        pylint $(git ls-files '*.py') --disable=C0301,C0103,C0410 --output=pylint_result.txt
     - name: Upload pylint result
       uses: actions/upload-artifact@v4
       with:
