--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -29,7 +29,7 @@ jobs:
         # usb_service
         pip install watchdog
         # volume
-        pip install pyalsaaudio --use-pep517
+        pip install pyalsaaudio
         # web_service
         pip install pydantic fastapi JinJa2 uvicorn python-multipart
         pip install
