--- a/.github/workflows/pylint-new.yml
+++ b/.github/workflows/pylint-new.yml
@@ -28,8 +28,8 @@ jobs:
         pip install vcgencmd
         # usb_service
         pip install watchdog
-        # volume
-        pip install pyalsaaudio --use-pep517
+        # volume: problem compiling...
+        # pip install pyalsaaudio --use-pep517
         # web_service
         pip install pydantic fastapi JinJa2 uvicorn python-multipart
         pip install
