--- a/.github/workflows/pylint-new.yml
+++ b/.github/workflows/pylint-new.yml
@@ -29,7 +29,7 @@ jobs:
         # usb_service
         pip install watchdog
         # volume
-        apt install libasound2-dev -y
+        apt-get install libasound2-dev -y
         pip install pyalsaaudio --use-pep517
         # web_service
         pip install pydantic fastapi JinJa2 uvicorn python-multipart
