--- a/.github/workflows/pylint-new.yml
+++ b/.github/workflows/pylint-new.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools wheel
+        python -m pip install --upgrade pip
         pip install pylint
         # backlighting
         pip install smbus2 rpi-lgpio
@@ -29,7 +29,7 @@ jobs:
         # usb_service
         pip install watchdog
         # volume
-        apt-get install gcc python3-dev libasound2-dev -y
+        sudo apt-get install libasound2-dev -y
         pip install pyalsaaudio --use-pep517
         # web_service
         pip install pydantic fastapi JinJa2 uvicorn python-multipart
