--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip
         pip install pylint
         # backlighting
         pip install smbus2 rpi-lgpio
@@ -29,10 +29,10 @@ jobs:
         # usb_service
         pip install watchdog
         # volume
-        pip install pyalsaaudio
+        sudo apt-get install libasound2-dev -y
+        pip install pyalsaaudio --use-pep517
         # web_service
         pip install pydantic fastapi JinJa2 uvicorn python-multipart
-        pip install
     - name: Analysing the code with pylint
       # C0301: long lines
       # C0103: naming errors
