--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -41,10 +41,10 @@ jobs:
       # C0410: mutiple imports on 1 line
       # Prevent MPDClient no-member errors, as they are false positives
       run: |
-        pylint $(git ls-files '*.py') 
-          --disable=C0301,C0103,C0410 
-          --generated-members=self.client.* 
-          --generated-members=mpd.client.* 
+        pylint $(git ls-files '*.py') | 
+          --disable=C0301,C0103,C0410 | 
+          --generated-members=self.client.* | 
+          --generated-members=mpd.client.* | 
           --output=pylint_result.txt || true
     - name: Upload pylint result
       uses: actions/upload-artifact@v4
