--- a/install_modules/autostart/autostart.service.template
+++ b/install_modules/autostart/autostart.service.template
@@ -11,8 +11,10 @@ Type=simple
 # Placeholders will be modified by ../autostart.sh script
 User=PLACEHOLDER_USER
 Group=PLACEHOLDER_GROUP
-WorkingDirectory=PLACEHOLDER_PATH
-ExecStart=/home/PLACEHOLDER_USER/.venv/bin/python3 PLACEHOLDER_PATH/oradio_control.py
+WorkingDirectory=PLACEHOLDER_PYTHON_PATH
+ExecStartPre=/bin/bash -c '/usr/bin/rm -f PLACEHOLDER_LOGGING_PATH/traceback.log'
+ExecStart=/home/PLACEHOLDER_USER/.venv/bin/python3 PLACEHOLDER_PYTHON_PATH/oradio_control.py
+StandardError=file:PLACEHOLDER_LOGGING_PATH/traceback.log
 RemainAfterExit=true
 Restart=always
 # Restart after 10 seconds
