--- a/install_modules/autostart/autostart.service.template
+++ b/install_modules/autostart/autostart.service.template
@@ -12,7 +12,9 @@ Type=simple
 User=PLACEHOLDER_USER
 Group=PLACEHOLDER_GROUP
 WorkingDirectory=PLACEHOLDER_PYTHON_PATH
-ExecStartPre=/bin/bash -c '/usr/bin/rm -f PLACEHOLDER_LOGGING_PATH/traceback.log'
+#OMJ: Als traceback.log bestaat en niet leeg is moet traceback.log eerst naar ORMS verstuurd worden.
+#OMJ: Keuze maken: of traceback.log wissen bij elke keer opstarten, of logrotate op toepassen om niet te groot te laten worden
+#ExecStartPre=/bin/bash -c '/usr/bin/rm -f PLACEHOLDER_LOGGING_PATH/traceback.log'
 ExecStart=/home/PLACEHOLDER_USER/.venv/bin/python3 PLACEHOLDER_PYTHON_PATH/oradio_control.py
 StandardError=file:PLACEHOLDER_LOGGING_PATH/traceback.log
 RemainAfterExit=true
