--- a/install_modules/spotify_connect/librespot.service
+++ b/install_modules/spotify_connect/librespot.service
@@ -3,27 +3,35 @@ Description=Librespot
 After=network.target
 
 [Service]
-Environment="LIBRESPOT_ZEROCONF_PORT=45305"
-Environment="LIBRESPOT_INITIAL_VOLUME=100"
-Environment="LIBRESPOT_DEVICE=SpotCon_in"
-Environment="LIBRESPOT_ENABLE_VOLUME_NORMALISATION=on"
-Environment="LIBRESPOT_DISABLE_AUDIO_CACHE="
-Environment="LIBRESPOT_AUTOPLAY=on"
-Environment="LIBRESPOT_SYSTEM_CACHE=/home/pi/Oradio3"
-Environment="LIBRESPOT_BACKEND=alsa"
-Environment="LIBRESPOT_NAME=Oradio"
-Environment="LIBRESPOT_VERBOSE="
+#Environment="LIBRESPOT_ZEROCONF_PORT=45305"
+#Environment="LIBRESPOT_INITIAL_VOLUME=100"
+#Environment="LIBRESPOT_DEVICE=SpotCon_in" Olaf: Via default Alsa
+#Environment="LIBRESPOT_ENABLE_VOLUME_NORMALISATION=on"
+#Environment="LIBRESPOT_DISABLE_AUDIO_CACHE="
+#Environment="LIBRESPOT_AUTOPLAY=on"
+#Environment="LIBRESPOT_SYSTEM_CACHE=/home/pi/Oradio3"
+#Environment="LIBRESPOT_BACKEND=alsa" Olaf: is standard
+#Environment="LIBRESPOT_NAME=Oradio"
+#Environment="LIBRESPOT_VERBOSE="
 #Environment="LIBRESPOT_ONEVENT=/home/pi/Oradio3/Python/librespot_event_handler.py"
-Environment="LIBRESPOT_DEVICE_TYPE=avr"
+#Environment="LIBRESPOT_DEVICE_TYPE=avr"
 
-# Set volume before starting Librespot
-#OMJ: Is dit gerelateerd aan regel 7: LIBRESPOT_INITIAL_VOLUME=100 ?
-#OMJ: Tijdens 1e keer installeren is audio nog niet geïnstalleerd, dus crasht amixer commando
-#ExecStartPre=/usr/bin/amixer -c 0 cset name='Digital Playback Volume' 90
-#ExecStart=/usr/bin/librespot --bitrate 320 --backend pipe --device /home/pi/spotify/librespot-pipe
-ExecStart=/usr/bin/librespot --bitrate 320
+# Reset flag files before starting librespot
+ExecStartPre=/bin/bash -c 'echo "0" > /home/pi/Oradio3/Spotify/spotactive.flag'
+ExecStartPre=/bin/bash -c 'echo "0" > /home/pi/Oradio3/Spotify/spotplaying.flag'
+
+ExecStart=/usr/bin/librespot \
+    --name Oradio \
+    --initial-volume 100 \
+    --volume-ctrl log \
+    --volume-range 100 \
+    --device-type avr \
+    --autoplay on \
+    --onevent /usr/local/bin/spotify_event_handler.sh
 
 Restart=always
+RestartSec=10
+
 User=pi
 Group=pi
 
