--- a/install_modules/spotify_connect/librespot.service.template
+++ b/install_modules/spotify_connect/librespot.service.template
@@ -1,8 +1,14 @@
+# Placeholders will be modified by ../spotify_connect.sh script
+
 [Unit]
 Description=Librespot
 After=network.target
 
 [Service]
+# Controls where file descriptor 1 (stdout) and 2 (stderr) of the executed processes is connected to
+StandardOutput=append:PLACEHOLDER_LOGFILE_SPOTIFY
+StandardError=append:PLACEHOLDER_LOGFILE_SPOTIFY
+
 #Environment="LIBRESPOT_ZEROCONF_PORT=45305"
 #Environment="LIBRESPOT_INITIAL_VOLUME=100"
 #Environment="LIBRESPOT_DEVICE=SpotCon_in" Olaf: Via default Alsa
@@ -17,8 +23,8 @@ After=network.target
 #Environment="LIBRESPOT_DEVICE_TYPE=avr"
 
 # Reset flag files before starting librespot
-ExecStartPre=/bin/bash -c 'echo "0" > /home/pi/Oradio3/Spotify/spotactive.flag'
-ExecStartPre=/bin/bash -c 'echo "0" > /home/pi/Oradio3/Spotify/spotplaying.flag'
+ExecStartPre=/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_DIR/spotactive.flag'
+ExecStartPre=/bin/bash -c 'echo "0" > PLACEHOLDER_SPOTIFY_DIR/spotplaying.flag'
 
 ExecStart=/usr/bin/librespot \
     --name Oradio \
@@ -32,8 +38,9 @@ ExecStart=/usr/bin/librespot \
 Restart=always
 RestartSec=10
 
-User=pi
-Group=pi
+# Set the UNIX user or group that the processes are executed as, respectively
+User=PLACEHOLDER_USER
+Group=PLACEHOLDER_GROUP
 
 [Install]
 WantedBy=multi-user.target
