--- a/install_modules/audio/asound.conf
+++ b/install_modules/audio/asound.conf
@@ -13,7 +13,7 @@ pcm.SysSound_in {
 # Spotify Connect input
 pcm.SpotCon_in {
     type plug
-    slave.pcm "dmixer"
+    slave.pcm "SoftVolSpotCon"
 }
 
 # Mixer definition
@@ -37,13 +37,29 @@ pcm.dmixer {
     }
 }
 
-# Default PCM uses volume_control
+# Create a softvol device wrapping dmixer.
+pcm.SoftVolSpotCon {
+    type softvol
+    slave.pcm "dmixer"
+    control {
+        name "VolumeSpotCon"
+        card "DigiAMP"
+    }
+}
+
+ctl.SoftVolSpotCon {
+   type softvol
+   card "DigiAMP"
+}
+
+
+# Make the default PCM use the softvol device via a plug.
 pcm.!default {
     type plug
     slave.pcm "dmixer"
 }
 
-# Define a standard control interface
+# Standard control interface for hardware.
 ctl.!default {
     type hw
     card "DigiAMP"
