--- a/install_resources/autostart.service.template
+++ b/install_resources/autostart.service.template
@@ -1,4 +1,4 @@
-# Placeholders will be modified by ../autostart.sh script
+# Placeholders will be modified by ../oradio_install.sh script
 
 [Unit]
 Description=Autostart Oradio
@@ -16,7 +16,7 @@ User=PLACEHOLDER_USER
 Group=PLACEHOLDER_GROUP
 
 # Clear traceback.log when starting the service
-StandardError=file:PLACEHOLDER_LOGGING_PATH/traceback.log
+StandardError=file:PLACEHOLDER_LOGFILE_TRACEBACK
 
 # Start Oradio
 WorkingDirectory=PLACEHOLDER_PYTHON_PATH
@@ -25,7 +25,7 @@ ExecStart=/home/PLACEHOLDER_USER/.venv/bin/python3 oradio_control.py
 # Send traceback.log to Oradio Remote Monitoring Service
 ExecStopPost=-/usr/bin/bash -c  'curl -s \
 									-F "serial=$(vcgencmd otp_dump | grep "28:" | cut -c 4-)" \
-									-F "data=@PLACEHOLDER_LOGGING_PATH/traceback.log" \
+									-F "data=@PLACEHOLDER_LOGFILE_TRACEBACK" \
 									https://oradiolabs.nl/rms/receive.php \
 								'
 
