--- a/install_resources/mpd.conf
+++ b/install_resources/mpd.conf
@@ -11,14 +11,14 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"PLACEHOLDER_USB_MUSIC"
+music_directory		"/media/oradio/Muziek"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-playlist_directory		"PLACEHOLDER_USB_PLAYLISTS"
+playlist_directory	"/media/oradio/Speellijsten"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -26,7 +26,7 @@ playlist_directory		"PLACEHOLDER_USB_PLAYLISTS"
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-db_file			"/var/lib/mpd/tag_cache"
+db_file				"/var/lib/mpd/tag_cache"
 
 # These settings are the locations for the daemon log files for the daemon.
 #
@@ -56,7 +56,7 @@ state_file			"/var/lib/mpd/state"
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-sticker_file                   "/var/lib/mpd/sticker.sql"
+sticker_file		"/var/lib/mpd/sticker.sql"
 #
 ###############################################################################
 
@@ -83,10 +83,10 @@ user				"mpd"
 # systemd socket activation is in use.
 #
 # For network
-bind_to_address			"localhost"
+bind_to_address		"localhost"
 #
 # And for Unix Socket
-#bind_to_address		"/run/mpd/socket"
+#bind_to_address	"/run/mpd/socket"
 #
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
