--- a/install_modules/audio/asound.conf
+++ b/install_modules/audio/asound.conf
@@ -1,31 +1,23 @@
-# Define MPD input to mix with dmixer
-pcm.MPD_in {
-    type plug
-    slave.pcm "dmixer"
+#########################################################################
+# Hardware: physical sound card (DigiAMP)
+#########################################################################
+pcm.oradio_snd_card {
+    type hw
+    card "DigiAMP"
+    device 0
 }
 
-# System Sounds input
-pcm.SysSound_in {
-    type plug
-    slave.pcm "dmixer"
-}
-
-# Spotify Connect input
-pcm.SpotCon_in {
-    type plug
-    slave.pcm "SoftVolSpotCon"
-}
-
-# Mixer definition
+#########################################################################
+# DMIXER: mixing and hardware output
+#########################################################################
 pcm.dmixer {
     type dmix
-    ipc_key 1234
+    ipc_key 1024
     ipc_perm 0666
     slave {
-        pcm "hw:0,0"        # Use the physical output (DigiAMP+)
-     #   rate 44100          # Ensure compatibility
-        rate 96000
-        format S16_LE       # 16-bit, little-endian
+        pcm "oradio_snd_card"
+        rate 44100
+        format S16_LE       
         channels 2
         period_time 0
         period_size 1024
@@ -36,30 +28,158 @@ pcm.dmixer {
         1 1
     }
 }
-
-# Create a softvol device wrapping dmixer.
-pcm.SoftVolSpotCon {
+#########################################################################
+# Volume Control for Spotify2: for lower volume during announcements
+#########################################################################
+pcm.SoftVolSpotCon2 {
     type softvol
     slave.pcm "dmixer"
     control {
-        name "VolumeSpotCon"
+        name "VolumeSpotCon2"
         card "DigiAMP"
     }
 }
 
-ctl.SoftVolSpotCon {
+
+#########################################################################
+# Volume Control for Spotify: for mute Spotify if switched off
+#########################################################################
+pcm.SoftVolSpotCon1 {
+    type softvol
+    slave.pcm "SoftVolSpotCon2"
+    control {
+        name "VolumeSpotCon1"
+        card "DigiAMP"
+    }
+}
+
+#########################################################################
+# Post-Equalizer Conversion for Spotify
+#########################################################################
+pcm.spotify_equal_out_plug {
+    type plug
+    slave {
+         pcm "SoftVolSpotCon1"
+         format S16_LE
+         rate 44100
+         channels 2
+    }
+}
+
+#########################################################################
+# Equalizer Stage for Spotify (Raw)
+#########################################################################
+pcm.spotify_equal_raw {
+    type equal
+    slave.pcm "spotify_equal_out_plug"
+    controls "/etc/alsaequal.bin"
+}
+
+#########################################################################
+# Outer Plug for Spotify Equalizer Input
+#########################################################################
+pcm.spotify_equal {
+    type plug
+    slave {
+         pcm "spotify_equal_raw"
+         format FLOAT_LE
+         rate 44100
+         channels 2
+    }
+}
+
+#########################################################################
+# MPD Chain: Separate volume and equalizer for MPD input
+#########################################################################
+
+pcm.mpd_equal_out_plug {
+    type plug
+    slave {
+         pcm "dmixer"
+         format S16_LE
+         rate 44100
+         channels 2
+    }
+}
+
+pcm.mpd_equal_raw {
+    type equal
+    slave.pcm "mpd_equal_out_plug"
+    controls "/etc/alsaequal.bin"
+}
+
+pcm.mpd_equal {
+    type plug
+    slave {
+         pcm "mpd_equal_raw"
+         format FLOAT_LE
+         rate 44100
+         channels 2
+    }
+}
+
+#########################################################################
+# Volume controller System Sounds
+#########################################################################
+pcm.SoftVolSysSound {
+    type softvol
+    slave.pcm "dmixer"
+    control {
+        name "VolumeSysSound"
+        card "DigiAMP"
+    }
+}
+
+#########################################################################
+# Input Definitions for Spotify, MPD, and System Sounds
+#########################################################################
+pcm.SpotCon_in {
+    type plug
+    slave.pcm "spotify_equal"
+}
+
+pcm.MPD_in {
+    type plug
+    slave.pcm "mpd_equal"
+}
+
+pcm.SysSound_in {
+    type plug
+    slave.pcm "SoftVolSysSound"
+}
+
+
+#########################################################################
+# Default PCM: You can set your default as needed.
+#########################################################################
+pcm.!default {
+    type plug
+    slave.pcm "dimixer"
+}
+
+#########################################################################
+# Control Interfaces
+#########################################################################
+ctl.equal{
+    type equal
+    controls "/etc/alsaequal.bin"
+}
+
+ctl.SoftVolSpotCon1 {
    type softvol
    card "DigiAMP"
 }
 
-
-# Make the default PCM use the softvol device via a plug.
-pcm.!default {
-    type plug
-    slave.pcm "dmixer"
+ctl.SoftVolSpotCon2 {
+   type softvol
+   card "DigiAMP"
 }
 
-# Standard control interface for hardware.
+ctl.SoftVolSysSound {
+   type softvol
+   card "DigiAMP"
+}
+
 ctl.!default {
     type hw
     card "DigiAMP"
