--- a/install_modules/audio/asound.conf
+++ b/install_modules/audio/asound.conf
@@ -92,10 +92,19 @@ pcm.spotify_equal {
 # MPD Chain: Separate volume and equalizer for MPD input
 #########################################################################
 
+pcm.SoftVolMPD {
+    type softvol
+    slave.pcm "dmixer"
+    control {
+        name "VolumeMPD"
+        card "DigiAMP"
+    }
+}
+
 pcm.mpd_equal_out_plug {
     type plug
     slave {
-         pcm "dmixer"
+         pcm "SoftVolMPD"
          format S16_LE
          rate 44100
          channels 2
@@ -174,6 +183,12 @@ ctl.SoftVolSpotCon2 {
    type softvol
    card "DigiAMP"
 }
+
+ctl.SoftVolMPD {
+   type softvol
+   card "DigiAMP"
+}
+
 
 ctl.SoftVolSysSound {
    type softvol
