Update equalizer setting

--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -163,7 +163,7 @@ pcm.SysSound_in {
 #########################################################################
 pcm.!default {
     type plug
-    slave.pcm "dimixer"
+    slave.pcm "dmixer"
 }
 
 #########################################################################
