--- a/install_resources/mpd.conf
+++ b/install_resources/mpd.conf
@@ -387,12 +387,12 @@ replaygain			"track"
 # This setting sets the pre-amp used for files that have ReplayGain tags. By
 # default this setting is disabled.
 #
-replaygain_preamp		"0"
+replaygain_preamp		"4"
 #
 # This setting sets the pre-amp used for files that do NOT have ReplayGain tags.
 # By default this setting is disabled.
 #
-replaygain_missing_preamp	"0"
+replaygain_missing_preamp	"-2"
 #
 # This setting enables or disables ReplayGain limiting.
 # MPD calculates actual amplification based on the ReplayGain tags
@@ -401,7 +401,7 @@ replaygain_missing_preamp	"0"
 # above its original level. If replaygain_limit is disabled such amplification
 # might occur. By default this setting is enabled.
 #
-replaygain_limit		"yes"
+replaygain_limit		"no"
 #
 # This setting enables on-the-fly normalization volume adjustment. This will
 # result in the volume of all playing audio to be adjusted so the output has
