--- a/.github/workflows/.pylintrc
+++ b/.github/workflows/.pylintrc
@@ -10,12 +10,13 @@ load-plugins=
 # C0114: missing-module-docstring
 # C0115: missing-class-docstring
 # C0116: missing-function-docstring
+# C0301: line too long
 # R0903: too-few-public-methods (e.g. for simple data classes)
-disable=C0114, C0115, C0116, R0903
+disable=C0114, C0115, C0116, C0301, R0903
 
 [FORMAT]
 # PEP8 recommends a maximum line length of 79 characters
-max-line-length=79
+# max-line-length=79
 
 # Indentation settings (4 spaces, as per PEP8)
 indent-string='    '
