Fix logrotate not working
Fix issue https://github.com/oradiolabs/Oradio3/issues/225

--- a/install_resources/logrotate.conf.template
+++ b/install_resources/logrotate.conf.template
@@ -5,6 +5,8 @@ PLACEHOLDER_LOGFILE_USB {
 	missingok
 	nocompress
 	rotate 1
+	notifempty
+	copytruncate
 }
 
 PLACEHOLDER_LOGFILE_SPOTIFY {
@@ -12,6 +14,8 @@ PLACEHOLDER_LOGFILE_SPOTIFY {
 	missingok
 	nocompress
 	rotate 1
+	notifempty
+	copytruncate
 }
 
 PLACEHOLDER_LOGFILE_INSTALL {
@@ -19,6 +23,8 @@ PLACEHOLDER_LOGFILE_INSTALL {
 	missingok
 	nocompress
 	rotate 1
+	notifempty
+	copytruncate
 }
 
 PLACEHOLDER_LOGFILE_TRACEBACK {
@@ -26,4 +32,6 @@ PLACEHOLDER_LOGFILE_TRACEBACK {
 	missingok
 	nocompress
 	rotate 1
+	notifempty
+	copytruncate
 }
