Fix logrotate not working
Fix issue https://github.com/oradiolabs/Oradio3/issues/225

--- a/install_resources/logrotate.conf.template
+++ b/install_resources/logrotate.conf.template
@@ -5,6 +5,7 @@ PLACEHOLDER_LOGFILE_USB {
 	missingok
 	nocompress
 	rotate 1
+	copytruncate
 }
 
 PLACEHOLDER_LOGFILE_SPOTIFY {
@@ -12,6 +13,7 @@ PLACEHOLDER_LOGFILE_SPOTIFY {
 	missingok
 	nocompress
 	rotate 1
+	copytruncate
 }
 
 PLACEHOLDER_LOGFILE_INSTALL {
@@ -19,6 +21,7 @@ PLACEHOLDER_LOGFILE_INSTALL {
 	missingok
 	nocompress
 	rotate 1
+	copytruncate
 }
 
 PLACEHOLDER_LOGFILE_TRACEBACK {
@@ -26,4 +29,5 @@ PLACEHOLDER_LOGFILE_TRACEBACK {
 	missingok
 	nocompress
 	rotate 1
+	copytruncate
 }
