--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -26,11 +26,4 @@ jobs:
         run: pip install ruff
 
       - name: Analyse the code with Ruff
-        continue-on-error: true
-        run: ruff check . --select UP,B002,B006 >ruff_result.txt
-
-      - name: Upload ruff result
-        uses: actions/upload-artifact@v4
-        with:
-          name: ruff_result.txt
-          path: ruff_result.txt
+        run: ruff check . --select UP,B002,B006 | grep -i deprecated
