--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -26,10 +26,4 @@ jobs:
         run: pip install ruff
 
       - name: Analyse the code with Ruff
-        run: ruff check . --select UP,B002,B006 | grep -i deprecated >ruff_result.txt
-
-      - name: Upload ruff result
-        uses: actions/upload-artifact@v4
-        with:
-          name: ruff_result.txt
-          path: ruff_result.txt
+        run: ruff check . --select UP,B002,B006 | grep -i deprecated > ruff_result.txt && cat ruff_result.txt; exit 1 || exit 0
